--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tobyg74/tiktok-api-dl": "^1.3.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^4.11.0",
     "react-modal-video": "^2.0.1",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
