--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@tobyg74/tiktok-api-dl": "^1.3.4",
-    "next": "latest",
+    "next": "^15.4.6",
     "next-intl": "^4.3.4",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
     "react-modal-video": "^2.0.1",
     "react-scroll": "^1.8.9",
@@ -22,6 +22,7 @@
     "react-type-animation": "^3.1.0"
   },
   "devDependencies": {
+    "@types/react": "19.1.10",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
