--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@tobyg74/tiktok-api-dl": "^1.3.4",
     "next": "^15.4.6",
     "next-intl": "^4.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.11.0",
     "react-modal-video": "^2.0.2",
     "react-scroll": "^1.8.9",
