--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tobyg74/tiktok-api-dl": "^1.3.4",
     "next": "^15.4.6",
-    "next-intl": "^4.3.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next-intl": "^3.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-modal-video": "^2.0.2",
     "react-scroll": "^1.8.9",
     "react-toastify": "^11.0.5",
-    "react-type-animation": "^3.1.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "19.1.10",
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.21",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
-    "tailwindcss": "latest"
+    "tailwindcss": "^4.1.11"
   }
 }
